AppendingHasher uses ArrayList, not LinkedList
Summary:
Using a linked list optimizes `.hash()` calls at the expense of all the
much more common `.putWhatever()` calls. YourKit says switching to an
ArrayList cuts `RuleKeyBuilder.setReflectively(String, Object)` by 6.1%
and `RuleKeyBuilder.setReflectively(String, Iterator)` by 8.7%

Test Plan: Builds ands runs `orca`

Reviewed By: asp2insp

fbshipit-source-id: 69d53b0